--- a/views/adoptDetail.html
+++ b/views/adoptDetail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <head>
+  <html>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/style.css" />
@@ -41,38 +41,11 @@
         <i class="fa-solid fa-bars"></i>
     </div> -->
     </header>
-<main>
-    <h1>¡Que bueno verte por acá!</h1>
-    <p>Inicia sesión para acceder a tu perfil, ver tus fotos y vides, y descubrir nuevas formas
-        de cuidar a tu mascota.</p>
-        <div form="formulario">
-            <label for="Email">Email:</label><br>
-            <input type="email" name="Email" id="email" placeholder="Email"><br>
-            <label for="password">Contraseña</label><br>
-            <input class="formulario-input" type="password" placeholder="Contraseña"><br>
-        </div>
-        <form>
-            <button class="boton enviar" type="submit">Enviar</button>
-        </form>
-</main>
+    <main>
+
+    </main>
     <footer>
-        <img src="" width="300" alt="Huellitas en casa" id="logo">
-        <ul>
-            <li>Menú</li>
-            <li>Acerca de</li>
-            <li>Adopción</li>
-            <li>Contacto</li>
-            <li>Voluntariado</li>
-            </ul>
-            <ul>
-            <li>Nuestras redes</li>
-            <li>Facebook</li>
-            <li>Instragram</li>
-            <li>Twitter</li>
-        </ul>
-        <h3>Suscribite a nuestra newsletter</h3>
-        <input type="text" id="" name="Domicilio" placeholder="">
-        <p>2024 Huellitas a Casa. Todos los derechos reservados.</p>
+
     </footer>
-</body>
-</html>
+  </body>
+  </html>
