--- a/views/register.html
+++ b/views/register.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <body>
-        <header>
-            <img src="" width="300" alt="Huellitas en casa" id="logo">
-            <nav>
-                <ul class="desordenado">
-                    <li class="header_li"><a href="#">Acerca de </a></li>
-                    <li class="header_li"><a href="#">Adopción</a></li>
-                    <li class="header_li"><a href="#">Contacto</a></li>
-                    <li class="header_li"><a href="#">Voluntariado</a></li>
-                    <li class="header_li"><a href="./login.html">Ingresá</a></li>
-                    <i class="fa-solid fa-pen-to-square"></i>
-                </ul>
-            </nav>
-        </header>
+<html lang="es-AR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../public/style.css" />
+    <title>Huellitas en casa</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/4d235eb227.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
+  <body class="container">
+    <header class="main-header">
+      <nav class="container-nav">
+        <a class="navbar-logo" href="/views/index.html"> <img src="../public/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas"></a>
+        <ul>
+
+          <li><i class="fa-solid fa-paw"></i>Acerca de</li>
+
+          <li><i class="fa-solid fa-paw"></i>Adopción</li>
+
+          <li><i class="fa-solid fa-paw"></i>Contacto</li>
+
+          <li><i class="fa-solid fa-paw"></i>Voluntariado</li>
+
+          <li><i class="fa-solid fa-paw"></i>Formulario pre Adopción</li>
+
+          <li><i class="fa-regular fa-circle-user"></i></li>
+
+        </ul>
+      </nav>
+
+      <!-- <div class="burger-menu">
+        <i class="fa-solid fa-bars"></i>
+    </div> -->
+    </header>
         <main>
         <h1>¡Bienvenidos ala familia!</h1>
         <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
