--- a/views/register.html
+++ b/views/register.html
@@ -1,97 +1,96 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/style.css" />
-    <title>Huellitas en casa</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/4d235eb227.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
-  <body class="container">
-    <header class="main-header">
-      <nav class="container-nav">
-        <a class="navbar-logo" href="/views/index.html"> <img src="../public/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas"></a>
-        <ul>
 
-          <li><i class="fa-solid fa-paw"></i>Acerca de</li>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../public/stylesheets/style.css" />
+  <title>Huellitas en casa</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
 
-          <li><i class="fa-solid fa-paw"></i>Adopción</li>
+<body class="container">
+  <header class="main-header">
+    <nav class="container-nav">
+      <a class="navbar-logo" href="/views/index.html"> <img src="../public/images/huellitas_en_casa-logo.png"
+          class="logo-nav" alt="logo-huellitas"></a>
+      <ul class="nav-lista">
+        <li><i class="fa-solid fa-paw"></i>Acerca de</li>
+        <li><i class="fa-solid fa-paw"></i>Adopción</li>
+        <li><i class="fa-solid fa-paw"></i>Contacto</li>
+        <li><i class="fa-solid fa-paw"></i>Voluntariado</li>
+        <li><i class="fa-solid fa-paw"></i>Formulario pre Adopción</li>
+        <li><i class="fa-regular fa-circle-user"></i></li>
+      </ul>
+    </nav>
 
-          <li><i class="fa-solid fa-paw"></i>Contacto</li>
-
-          <li><i class="fa-solid fa-paw"></i>Voluntariado</li>
-
-          <li><i class="fa-solid fa-paw"></i>Formulario pre Adopción</li>
-
-          <li><i class="fa-regular fa-circle-user"></i></li>
-
-        </ul>
-      </nav>
-
-      <!-- <div class="burger-menu">
+    <!-- <div class="burger-menu">
         <i class="fa-solid fa-bars"></i>
     </div> -->
-    </header>
-        <main>
-        <h1>¡Bienvenidos ala familia!</h1>
-        <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
-        <form>
-            <div class="registro">
-                <label for="username">Nombre:</label><br>
-                <input type="text" name="" placeholder="" required><br>
-                <label for="username">Apellido:</label><br>
-                <input type="text" name="" placeholder="" required><br>
-                <label for="Email">Correo electronico:</label><br>
-                <input type="email" name="Email" id="email" placeholder="Email"><br>
-                <label for="phone">Teléfono:</label>
-                <input type="tel" id="phone" name="phone" placeholder=><br>
-                <label for="Domicilio">Dirección:</label><br>
-                <input type="text" id="Domicilio" name="Domicilio" placeholder="Domicilio"><br>
-                <label for="text">¿Como te enteraste de nosotros?:</label>
-                <select id="text" name="" required>
-                <option value=""></option>
-                <option value="es">Facebook</option>
-                <option value="mx">Instagram</option>
-                <option value="ar">Twitter</option>
-                <option value="co">Ya adopte</option>
-                <option value="cl">otro</option>
-                </select><br>
-                <button type="submit">Enviar</button>
-            </div>
-        </form>
-    </main>
-    <footer>
-        <h2>¿Por que registrarse</h2>
-        <p>Porque es un requisisto fundamental para formalizar la adopción. Nos permite mantener un
-            registro transparente de todas las adopciones realizadas y garantiza el cumplimineto de 
-            nuetras políticas de bienestar animal .
-        </p>
-        <img src="" width="300" alt="Huellitas en casa" id="logo">
-        <ul>
-            <li>Menú</li>
-            <li>Acerca de</li>
-            <li>Adopción</li>
-            <li>Contacto</li>
-            <li>Voluntariado</li>
-            </ul>
-            <ul>
-            <li>Nuestras redes</li>
-            <li>Facebook</li>
-            <li>Instragram</li>
-            <li>Twitter</li>
-        </ul>
-        <h3>Suscribite a nuestra newsletter</h3>
-        <input type="text" id="" name="Domicilio" placeholder="">
-        <p>2024 Huellitas a Casa. Todos los derechos reservados.</p>
-    </footer>
-    </body>
+  </header>
+  <main>
+    <h1>¡Bienvenidos ala familia!</h1>
+    <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
+    <form>
+      <div class="registro">
+        <label for="username">Nombre:</label><br>
+        <input type="text" name="" placeholder="" required><br>
+        <label for="username">Apellido:</label><br>
+        <input type="text" name="" placeholder="" required><br>
+        <label for="Email">Correo electronico:</label><br>
+        <input type="email" name="Email" id="email" placeholder="Email"><br>
+        <label for="phone">Teléfono:</label>
+        <input type="tel" id="phone" name="phone" placeholder=><br>
+        <label for="Domicilio">Dirección:</label><br>
+        <input type="text" id="Domicilio" name="Domicilio" placeholder="Domicilio"><br>
+        <label for="text">¿Como te enteraste de nosotros?:</label>
+        <select id="text" name="" required>
+          <option value=""></option>
+          <option value="es">Facebook</option>
+          <option value="mx">Instagram</option>
+          <option value="ar">Twitter</option>
+          <option value="co">Ya adopte</option>
+          <option value="cl">otro</option>
+        </select><br>
+        <button  class ="enviar" type="submit">Enviar</button>
+      </div>
+    </form>
+  </main>
+  <footer>
+    <h2>¿Por que registrarse</h2>
+    <p>Porque es un requisisto fundamental para formalizar la adopción. Nos permite mantener un
+      registro transparente de todas las adopciones realizadas y garantiza el cumplimineto de
+      nuetras políticas de bienestar animal .
+    </p>
+    <img src="../public/images/huellitas_en_casa-logo.png" width="200" alt="Huellitas en casa" id="logo">
+    <div>
+    <h2>Menú</h2>
+      <ul class="footer-lista">
+      <li>Acerca de</li>
+      <li>Adopción</li>
+      <li>Contacto</li>
+      <li>Voluntariado</li>
+    </ul>
+    </div>
+    <div>
+    <h3>Nuestras redes</h3>
+    <ul class="footer-lista">
+      <li>Facebook</li>
+      <li>Instragram</li>
+      <li>Twitter</li>
+    </ul>
+    </div>
+    <div class="newsletter">
+    <h3>Suscribite a nuestra newsletter</h3>
+    <input type="text" id="" name="Domicilio" placeholder="">
+    </div>
+    <p>2024 Huellitas a Casa. Todos los derechos reservados.</p>
+  </footer>
+</body>
+
 </html>
