--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../public/stylesheets/style.css" />
-  <link rel="stylesheet" href="../public/stylesheets/index.css" />
-  <link rel="stylesheet" href="../public/stylesheets/preform.css" />
   <title>Huellitas en casa</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="../Css/style.css">
-  <link rel="stylesheet" href="../Css/index.css">
-  <link rel="stylesheet" href="index.html">
   <link
     href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet" />
@@ -23,33 +18,34 @@
   <header class="main-header">
     <nav class="container-nav">
       <a class="navbar-logo" href="/views/index.html"> <img src="../public/images/huellitas_en_casa-logo.png"
-          class="logo-nav" alt="logo-huellitas"></a>
-      <ul class="nav-lista">
-        <!-- class = nav-lista por que no podia mover los iteems -->
-        <li><i class="fa-solid fa-paw"></i>Acerca de</li>
-        <li><i class="fa-solid fa-paw"></i>Adopción</li>
-        <li><i class="fa-solid fa-paw"></i>Contacto</li>
-        <li><i class="fa-solid fa-paw"></i>Voluntariado</li>
-        <li><i class="fa-solid fa-paw"></i>Formulario pre Adopción</li>
-        <li><i class="fa-regular fa-circle-user"></i></li>
+          class="logo-nav" alt="logo-huellitas">
+        </a>
+        <ul class="nav-lista">
+          <li><a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a></li>
+          <li><a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a></li>
+          <li><a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a></li>
+          <li><a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a></li>
+          <li><a href="/views/preAdopt.html"><i class="fa-solid fa-paw"></i> Formulario pre Adopción</a></li>
+          <li><a href="./register.html"><i class="fa-regular fa-circle-user"></i> Registrate</a></li>
+          <li><a href="./login.html"><i class="fa-solid fa-right-to-bracket"></i> Inicia sesión</a></li>
       </ul>
     </nav>
-
     <!-- <div class="burger-menu">
         <i class="fa-solid fa-bars"></i>
     </div> -->
   </header>
-  <main class="contenido">
-    <h2>Sobre nosotras</h2>
-    <!-- Le agregue una class para que solo este en color la descripción en css -->
-    <p class="parrafo">
+  <main class="content">
+    <h2 id="titulo-container">Sobre nosotras</h2>
+    <!-- Texto sección Acerca de -->
+    <p id="about-us">
       Somos un equipo comprometido con el bienestar animal. Nuestra misión es
       rescatar , cuidar y encontrar hogares amorosos para perros y gatos que
-      han sido abandonados o necesitan una segunda oportunidad . Nos enfocamos
+      han sido abandonados o necesitan una segunda oportunidad. Nos enfocamos
       en garantizar adopciones responsables , acompañando a los adoptantes en
-      casa paso del camino para conttruir juntos historias llenas de amor y
-      esperanza .
+      casa paso del camino para construir juntos historias llenas de amor y
+      esperanza.
     </p>
+
     <form action="buscar" method="get" id="search-form">
       <input type="text" id="search" name="search" placeholder="Buscar por zona o nombre" /><i
         class="fa-solid fa-magnifying-glass"></i>
@@ -57,134 +53,219 @@
 
     <!-- Sección Animales en adopción -->
 
-    <section class="animal-container">
-      <h2>Animales en Adopción</h2>
-      <div class="animales">
+    <section id="animal-container">
+      <h2 id="titulo-container">Animales en Adopción</h2>
+      <div class="animales animal-list">
         <article class="animal">
           <img src="/public/images/aragorn-adopcion.jpg" alt="img-perro-marron-adulto" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart">Adoptar</i>
             <h3>Aragorn</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Macho</p>
               <p class="edad">Edad : 4 años aprox.</p>
               <p class="zona">Zona : Lanús</p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
+              <button onclick="location.href='/adoption/adoptDetail?id=1'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
+              
             </div>
           </div>
         </article>
-        <!-- Meli: A partir de acá copia y pega para los otros 6 animales. Rellena las secciones sexo, edad y zona a tu gusto! -->
 
         <article class="animal">
           <img src="/public/images/dooku-adopcion.jpg" alt="img-gatito-naranja-cachorro" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart">Adoptar</i>
             <h3>Dooku</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Macho </p>
               <p class="edad">Edad : 3 meses .</p>
               <p class="zona">Zona : Pilar </p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
+              <button onclick="location.href='/adoption/adoptDetail?id=2'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
             </div>
           </div>
         </article>
+
         <article class="animal">
           <img src="/public/images/boromir-adopcion.jpg" alt="img-perro-atigrado-cachorro" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart">Adoptar</i>
             <h3>Boromir</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Macho</p>
               <p class="edad">Edad : 2 meses .</p>
               <p class="zona">Zona : Quilmes </p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
-            </div>
+              <button onclick="location.href='/adoption/adoptDetail?id=3'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>   
+             </div>
           </div>
         </article>
+
         <article class="animal">
           <img src="/public/images/galadriel-adopcion.jpeg" alt="img-gata-tricolor-cachorra" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
-            <h3>Boromir</h3>
+            <i class="fa-solid fa-heart">Adoptar</i>
+            <h3>Gala (Galadriel)</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Hembra </p>
               <p class="edad">Edad : 1 año.</p>
               <p class="zona">Zona : Polvorines</p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
-            </div>
+              <button onclick="location.href='/adoption/adoptDetail?id=4'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
+                        </div>
           </div>
         </article>
+
+        <article class="animal">
+          <img src="/public/images/gandalf-adopcion.jpg" alt="img-perra-blanca-y-negra-cachorra" class="pets">
+          <div class="detalles-animal">
+            <i class="fa-solid fa-heart">Adoptar</i>
+            <h3>Gandalf</h3>
+            <h4>Adopción responsable</h4>
+            <div class="descripcion-animal">
+              <p class="sexo">Sexo: Macho</p>
+              <p class="edad">Edad : 5 años.</p>
+              <p class="zona">Zona : Berazategui </p>
+              <button onclick="location.href='/adoption/adoptDetail?id=5'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
+                        </div>
+          </div>
+        </article>
+
         <article class="animal">
           <img src="/public/images/guts-adopcion.jpg" alt="img-gatito-naranja-cachorro" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart">Adoptar</i>
             <h3>Guts</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Macho </p>
-              <p class="edad">Edad : 6 meses .</p>
-              <p class="zona">Zona : Quilme </p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
-            </div>
+              <p class="edad">Edad: 6 meses .</p>
+              <p class="zona">Zona: Pilar </p>
+              <button onclick="location.href='/adoption/adoptDetail?id=6'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
+                </div>
           </div>
         </article>
+
         <article class="animal">
           <img src="/public/images/legolas-adopcion.jpg" alt="img-perro-naranja-adulto" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart">Adoptar</i>
             <h3>Legolas</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Macho</p>
-              <p class="edad">Edad : 3 años .</p>
-              <p class="zona">Zona : Hurlingham </p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
-            </div>
+              <p class="edad">Edad: 3 años .</p>
+              <p class="zona">Zona: Hurlingham </p>
+              <button onclick="location.href='/adoption/adoptDetail?id=7'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
+                        </div>
           </div>
         </article>
+
         <article class="animal">
           <img src="/public/images/nessa-adopcion.jpg" alt="img-perra-blanca-y-negra-cachorra" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart">Adoptar</i>
             <h3>Nessa</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Hembra</p>
               <p class="edad">Edad : 8 meses .</p>
-              <p class="zona">Zona : W Morris</p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
-            </div>
+              <p class="zona">Zona : William Morris</p>
+              <button onclick="location.href='/adoption/adoptDetail?id=8'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
+                        </div>
           </div>
         </article>
-        </article>
+
         <article class="animal">
           <img src="/public/images/padme-adopcion.jpeg" alt="img-gata-carey-cachorra" class="pets">
           <div class="detalles-animal">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart">Adoptar</i>
             <h3>Padme</h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
               <p class="sexo">Sexo: Hembra</p>
-              <p class="edad">Edad : 8 meses .</p>
-              <p class="zona">Zona : W Morris</p>
-              <button><i class="fa-solid fa-bone"></i> Leer más </button>
+              <p class="edad">Edad : 1 año .</p>
+              <p class="zona">Zona : Devoto </p>
+              <button onclick="location.href='/adoption/adoptDetail?id=9'">
+                <i class="fa-solid fa-bone"></i> Leer más
+              </button>
             </div>
           </div>
         </article>
-
-        <!-- Estas dos etiquetas no las toques! -->
       </div>
     </section>
 
-  </main>
-  <footer>
+    <section id="contacto"> 
+        <h1>Contacto</h1>
+        <p>Llena este formulario para ponernos en contacto con vos.</p>
+        <div class="caja-formulario">
+            <form id="formulario">
+                <label for="name">Nombre Completo</label>
+                <input class="formulario-input" type="text" id="name" name="name" placeholder="Nombre y apellido">
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email" placeholder="Email">
+                <label for="telefono">Teléfono:</label>
+                <input type="tel" name="telefono" id="telefono" placeholder="Número de teléfono">
+                <label for="asunto">Asunto:</label>
+                <input type="text" name="asunto" id="asunto" placeholder="Contanos por qué nos contactas">
+                <label for="mensaje">Tu mensaje</label>
+                <textarea name="mensaje" id="mensaje" placeholder="Deja tu mensaje, duda o consulta" required></textarea>
+                <button class="boton-enviar" type="submit">Enviar</button> 
+                <button class="boton-reset" type="reset">Borrar</button> 
+            </form>
+        </div>
+    </section>
 
-    © 2024 Huellitas en Casa. Todos los derechos reservados.
-  </footer>
+  </main>
+
+  <footer>
+    <div class="footer-content">  
+        <img src="../public/images/huellitas_en_casa-logo.png" alt="Huellitas en casa" class="footer-logo"> 
+        <div class="footer-columns"> 
+            <div class="footer-column">
+                <h2>Menú</h2>
+                <ul class="footer-list"> 
+                  <li><a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a></li>
+                  <li><a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a></li>
+                  <li><a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a></li>
+                  <li><a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h2>Nuestras redes</h2>
+                <ul class="footer-list">
+                    <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
+                    <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
+                    <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
+                    <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-newsletter"> 
+            <h3>Suscribite a nuestra newsletter</h3>
+            <input type="text" id="newsletter" name="newsletter" placeholder="Ingresa tu correo">
+        </div>
+    </div> 
+    <p class="footer-copyright">© 2024 Huellitas en Casa. Todos los derechos reservados.</p> 
+</footer>
 </body>
 
 </html>
