--- a/views/register.html
+++ b/views/register.html
@@ -19,14 +19,15 @@
     <nav class="container-nav">
       <a class="navbar-logo" href="/views/index.html"> <img src="../public/images/huellitas_en_casa-logo.png"
           class="logo-nav" alt="logo-huellitas"></a>
-      <ul class="nav-lista">
-        <li><i class="fa-solid fa-paw"></i>Acerca de</li>
-        <li><i class="fa-solid fa-paw"></i>Adopción</li>
-        <li><i class="fa-solid fa-paw"></i>Contacto</li>
-        <li><i class="fa-solid fa-paw"></i>Voluntariado</li>
-        <li><i class="fa-solid fa-paw"></i>Formulario pre Adopción</li>
-        <li><i class="fa-regular fa-circle-user"></i></li>
-      </ul>
+          <ul class="nav-lista">
+            <li><a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a></li>
+            <li><a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a></li>
+            <li><a href="/views/contact.html"><i class="fa-solid fa-paw"></i> Contacto</a></li>
+            <li><a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a></li>
+            <li><a href="/views/preAdopt.html"><i class="fa-solid fa-paw"></i> Formulario pre Adopción</a></li>
+            <li><a href="./register.html"><i class="fa-regular fa-circle-user"></i> Registrate</a></li>
+            <li><a href="./login.html"><i class="fa-solid fa-right-to-bracket"></i> Inicia sesión</a></li>
+        </ul>
     </nav>
 
     <!-- <div class="burger-menu">
@@ -34,7 +35,7 @@
     </div> -->
   </header>
   <main>
-    <h1>¡Bienvenidos ala familia!</h1>
+    <h1>¡Bienvenidos a la familia!</h1>
     <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
     <form>
       <div class="registro">
@@ -55,42 +56,43 @@
           <option value="mx">Instagram</option>
           <option value="ar">Twitter</option>
           <option value="co">Ya adopte</option>
-          <option value="cl">otro</option>
+          <option value="cl">Otro</option>
         </select><br>
         <button  class ="enviar" type="submit">Enviar</button>
       </div>
     </form>
   </main>
   <footer>
-    <h2>¿Por que registrarse</h2>
-    <p>Porque es un requisisto fundamental para formalizar la adopción. Nos permite mantener un
-      registro transparente de todas las adopciones realizadas y garantiza el cumplimineto de
-      nuetras políticas de bienestar animal .
-    </p>
-    <img src="../public/images/huellitas_en_casa-logo.png" width="200" alt="Huellitas en casa" id="logo">
-    <div>
-    <h2>Menú</h2>
-      <ul class="footer-lista">
-      <li>Acerca de</li>
-      <li>Adopción</li>
-      <li>Contacto</li>
-      <li>Voluntariado</li>
-    </ul>
-    </div>
-    <div>
-    <h3>Nuestras redes</h3>
-    <ul class="footer-lista">
-      <li>Facebook</li>
-      <li>Instragram</li>
-      <li>Twitter</li>
-    </ul>
-    </div>
-    <div class="newsletter">
-    <h3>Suscribite a nuestra newsletter</h3>
-    <input type="text" id="" name="Domicilio" placeholder="">
-    </div>
-    <p>2024 Huellitas a Casa. Todos los derechos reservados.</p>
-  </footer>
+    <div class="footer-content">  
+        <img src="../public/images/huellitas_en_casa-logo.png" alt="Huellitas en casa" class="footer-logo"> 
+        <div class="footer-columns"> 
+            <div class="footer-column">
+                <h2>Menú</h2>
+                <ul class="footer-list"> 
+                  <li><a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a></li>
+                  <li><a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a></li>
+                  <li><a href="#contacto><i class="fa-solid fa-paw"></i> Contacto</a></li>
+                  <li><a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h2>Nuestras redes</h2>
+                <ul class="footer-list">
+                    <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
+                    <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
+                    <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
+                    <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-newsletter"> 
+            <h3>Suscribite a nuestra newsletter</h3>
+            <input type="text" id="newsletter" name="newsletter" placeholder="Ingresa tu correo">
+        </div>
+    </div> 
+    <p class="footer-copyright">© 2024 Huellitas en Casa. Todos los derechos reservados.</p> 
+</footer>
 </body>
 
 </html>
