--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -7,66 +7,29 @@ body{
 main{
     text-align: center;
 } 
-/* lista desordenada */
-.nav-lista {
-    color: blue;
-    list-style-type: none;
-    display: flex; 
-    justify-content: space-around; 
-    align-items: center; 
-    width: 80%; 
-    margin-left: 55vh;
-    padding: 0; 
+.titulo-container { /* Nuevo contenedor para el título y el párrafo */
+    margin-bottom: 20px; 
 }
 
-.nav-lista li {
-    display: flex;
-    align-items: center;
-    gap: 5px;
+.titulo-container p {
+    margin-top: 0; /* Elimina el margen superior por defecto del párrafo */
 }
-
-.nav-lista i {
-    font-size: 1.2rem; 
-}
-
-
 /* Formulario */
 .caja-formulario{
     border: 3px solid black; 
     width: 35%;
     margin-left: 30%;
+    margin-bottom: 20px;
 }
 
 .boton-enviar{
     background-color: lightblue;
 }
-
-
-/* footer */
-
-.footer-container {
-    display: flex; 
-    justify-content: space-around; 
-    align-items: flex-start; 
-    width: 70%; 
+.olvido-contrasena {
+    text-align: center;
+    margin-top: 20px;
 }
 
-.footer-lista {
-    color: blue;
-    list-style-type: none;
-    text-align: center;
-    display: flex;
-    flex-direction: column; 
-    justify-content: space-around;
-    padding: 0;
-    margin: 0; 
-}
-
-h2 {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.newsletter{
-    text-align: center;
+.olvido-contrasena button {
+    background-color: #F7E97B;
 }
