--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -1,56 +1,59 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-/* lista desordenada */
-.nav-lista {
-    color: blue;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 80%;
-    margin-left: 55vh;
-    padding: 0;
-    margin: 0;
-    gap: 15px;
-}
-
-/* margin y gap para que aparesca toda la nav en la pantalla */
-
-.nav-lista li {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.nav-lista i {
-    font-size: 1.2rem;
-}
-
 /* formulario */
-.registro {
-    border: 3px solid black;
-    width: 35%;
-    margin-left: 30%;
-}
-.enviar{
-    background-color: lightblue;
-}
-/* footer */
-.footer-lista {
-    list-style-type: none;
+.formulario {
+    background-color: transparent; 
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    max-width: 500px; 
+    margin: 0 auto; /* Centra el formulario */
+  }
+  .formulario h1 {
     text-align: center;
-    display: flex;
-    flex-direction: column; 
-    justify-content: space-around;
-    padding: 0;
-    margin: 0; 
-}
-
-h3 {
+    margin-bottom: 20px;
+  }
+  
+  .formulario p {
     text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  /* Estilos para los inputs */
+  input[type="text"],
+  input[type="number"],
+  input[type="email"],
+  select {
+    width: 400px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     margin-bottom: 10px;
-}
+    margin: 0;
+    box-sizing: border-box; 
+  }
+  
+  .btn-submit {
+    font-family: 'fredoka';
+    background-color: var(--color-celeste);
+    color: var(--color-negro-suave);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .formulario label {
+    display: block; 
+    margin-bottom: 5px; 
+  }
+  
+  .formulario textarea { 
+    width: 100%;
+    height: 150px; 
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: vertical; 
+  }
 
-.newsletter{
-    text-align: center;
-}
+  
