--- a/views/preAdopt.html
+++ b/views/preAdopt.html
@@ -1,126 +1,270 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/stylesheets/style.css" />
-    <link rel="stylesheet" href="../public/stylesheets/index.css" />
     <title>Huellitas en casa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="../Css/style.css">
-    <link rel="stylesheet" href="../Css/index.css">
-    <link rel="stylesheet" href="index.html">
     <link
-        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
-
-<body>
-    <header>
-        <nav class="container-nav">
-            <a class="navbar-logo" href="/views/index.html"> <img src="../public/images/huellitas_en_casa-logo.png"
-                    class="logo-nav" alt="logo-huellitas"></a>
-            <ul class="nav-lista">
-                <li><a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a></li>
-                <li><a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a></li>
-                <li><a href="/views/contact.html"><i class="fa-solid fa-paw"></i> Contacto</a></li>
-                <li><a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a></li>
-                <li><a href="/views/preAdopt.html"><i class="fa-solid fa-paw"></i> Formulario pre Adopción</a></li>
-                <li><a href="./register.html"><i class="fa-regular fa-circle-user"></i> Registrate</a></li>
-                <li><a href="./login.html"><i class="fa-solid fa-right-to-bracket"></i> Inicia sesión</a></li>
-            </ul>
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/4d235eb227.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="shortcut icon"
+      href="/public/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="container-nav">
+        <div class="logo-container">
+          <a class="navbar-logo" href="/views/index.html">
+            <img
+              src="../public/images/huellitas_en_casa-logo.png"
+              class="logo-nav"
+              alt="logo-huellitas"
+            />
+          </a>
+        </div>
+        <nav>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
+            <li class="nav-item">
+              <a class="nav-link active" href="#about-us">
+                <i class="fa-solid fa-paw"></i> Acerca de
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contacto">
+                <i class="fa-solid fa-paw"></i> Contacto
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fa-solid fa-paw"></i> Voluntariado
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/views/preAdopt.html">
+                <i class="fa-solid fa-paw"></i> Formulario pre Adopción
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./register.html">
+                <i class="fa-regular fa-circle-user"></i> Registrate
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./login.html">
+                <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
+              </a>
+            </li>
+          </ul>
         </nav>
+      </div>
     </header>
-    <main>
-        <h2>Formulario pre-adopción!</h2>
-        <p>¿A quién te gustaría adoptar?</p>
-        <input type="text" id="" name="" placeholder="">
-        <h3>Contanos sobre vos</h3>
-        <!-- Registro -->
-        <label for="username">Nombre y apellido:</label><br>
-        <input type="text" name="" placeholder=" Nombre y apellido" required><br>
-        <label for="username">Edad:</label><br>
-        <input type="text" name="" placeholder="" required><br>
-        <label for="Domicilio">Dirección:</label><br>
-        <input type="text" id="Domicilio" name="Domicilio" placeholder=""><br>
-        <label for="Domicilio">Localidad:</label><br>
-        <input type="text" id="Domicilio" name="Domicilio" placeholder=""><br>
-        <label for="Email">Correo electronico:</label><br>
-        <input type="email" name="Email" id="email" placeholder="Email"><br>
-        <label for="redes">Redes sociales:</label><br>
-        <input type="tel" id="phone" name="phone" placeholder=><br>
-        <p>¿Por qué motivo queres adoptar?</p>
-        <input type="text" id="" name="" placeholder="">
-        <p>¿Qué tipo de vivienda tenes?</p>
-        <input type="text" id="" name="" placeholder=""><br>
-        <p>Si vivis en dto o alquiler sabes si<br> permiten mascotas:</p>
-        <input type="text" id="" name="" placeholder=""><br>
-        <p>¿Cuantas personas viven<br> en tu hogar?:</p>
-        <input type="text" id="" name="" placeholder=""><br>
-        <p>¿Alguien en tu hogar es alergico a<br> perros o gatos?</p>
-        <input type="text" id="" name="" placeholder=""><br>
-        <p>¿Hay otras mascotas en tu casa?</p>
-        <input type="text" id="" name="" placeholder=""><br>
-        <p>¿Podés cubrir los gastos veterinarios<br> necesarios para cuidar su salúd?</p>
-        <input type="text" id="" name="" placeholder="">
-        <!-- descripcion al finalizar el registro -->
-        <div class="descripcion">
-            <p>Hasta aquí llego el formulario de adopción. Habiendo<br>
-                leído los requisitos y completado el formulario,¿Sentís<br>
-                que estás dispuesto a adoptar responsablemente<br>
-                darle el hogar y la vida que merece.<br>
-                Nosotros buscamos adopciones responsables y para toda la vida.<br>
-                Una mascota no se descarta,no se regala,no se maltrata<br>
-                y no se abandona.<br>
-                Es una vidaa la que se la respeta , cuida y ama como un miembro<br>
-                mas de la familia.<i class="fa-solid fa-paw"></i>
-            </p>
-        </div>
-        <form>
-            <button class="boton-enviar" type="submit">Volver</button>
-            <button class="boton-enviar" type="submit">Enviar</button>
-        </form>
+    <!-- Formulario de pre-adopción -->
+    <main class="formulario">
+      <h2>¡Formulario pre-adopción!</h2>
+      <label for="personaje">¿A quién te gustaría adoptar?</label>
+      <select id="personaje" name="personaje">
+        <option value="Aragorn">Aragorn</option>
+        <option value="Dooku">Dooku</option>
+        <option value="Boromir">Boromir</option>
+        <option value="Gala">Gala</option>
+        <option value="Gandalf">Gandalf</option>
+        <option value="Guts">Guts</option>
+        <option value="Legolas">Legolas</option>
+        <option value="Nessa">Nessa</option>
+        <option value="Padme">Padme</option>
+      </select>
+      <h3>Contanos sobre vos</h3>
+      <!-- Registro -->
+      <label for="username">Nombre y apellido:</label>
+      <input
+        type="text"
+        name="nombre"
+        placeholder=" Nombre y apellido"
+        required
+      />
+      <label for="username">Edad:</label>
+      <input
+        type="text"
+        name="edad"
+        placeholder="Ingresa tu edad"
+        required
+      />
+      <label for="Domicilio">Dirección:</label>
+      <input
+        type="text"
+        id="Domicilio"
+        name="Domicilio"
+        placeholder="Ingresa tu dirección"
+        required
+      />
+      <label for="Domicilio">Localidad:</label>
+      <input
+        type="text"
+        id="Domicilio"
+        name="Domicilio"
+        placeholder="Ingresa tu localidad"
+      />
+      <label for="Email">Correo electronico:</label>
+      <input type="email" name="Email" id="email" placeholder="Email">
+      <label for="motivo">¿Por qué motivo quieres adoptar?</label>
+      <textarea id="motivo" name="motivo" rows="5" placeholder="Contanos por qué querés adoptar"></textarea>
+      <label for="tipo_vivienda">¿Qué tipo de vivienda tenés?</label>
+      <select id="tipo_vivienda" name="tipo_vivienda">
+        <option value="casa">Casa</option>
+        <option value="departamento">Departamento</option>
+        <option value="PH">PH</option>
+        <option value="quinta">Quinta</option>
+      </select>
+      <label for="vivienda_alquiler">
+        Si alquilas, ¿Se permiten mascotas donde estas?</label
+      >
+      <select id="vivienda_alquiler" name="vivienda_alquiler">
+        <option value="sí">Sí</option>
+        <option value="no">No</option>
+        <option value="desconoce">Desconoce</option>
+      </select>
+      <p>¿Cuantas personas viven en tu hogar? Indica edades.</p>
+      <input
+        type="text"
+        id=""
+        name=""
+        placeholder="Indica cuantas personas hay en tu hogar y sus edades"
+      />
+      <p>¿Alguien en tu hogar tiene alergia a perros o gatos?</p>
+      <input
+        type="text"
+        id=""
+        name=""
+        placeholder="Indica si con medicación es tratable"
+      />
+      <p>¿Hay otras mascotas en tu casa?</p>
+      <input
+        type="text"
+        id=""
+        name=""
+        placeholder="Indica si son perros o gatos y cuantos"
+      />
+      <p>
+        ¿Podés cubrir los gastos veterinarios necesarios para cuidar su salúd?
+      </p>
+      <input type="text" id="" name="" placeholder="Indica si o no" />
+
+      <!-- descripcion al finalizar el registro -->
+      <div class="descripcion">
+        <p>
+          Hasta aquí llego el formulario de adopción. Habiendo leído los
+          requisitos y completado el formulario,¿Sentís que estás dispuesto a
+          adoptar responsablemente darle el hogar y la vida que merece. Nosotros
+          buscamos adopciones responsables y para toda la vida. Una mascota no
+          se descarta,no se regala,no se maltrata y no se abandona. Es una vidaa
+          la que se la respeta , cuida y ama como un miembro mas de la
+          familia.<i class="fa-solid fa-paw"></i>
+        </p>
+      </div>
+
+      <form>
+        <button class="boton-enviar" type="submit">Volver</button>
+        <button class="boton-enviar" type="submit">Enviar</button>
+      </form>
+
     </main>
+    <!-- Pie de página -->
     <footer>
-        <div class="footer-content">
-            <img src="../public/images/huellitas_en_casa-logo.png" alt="Huellitas en casa" class="footer-logo">
-            <div class="footer-columns">
-                <div class="Dirección">ruta 16 Parc 501</div>
-                <div class="contacto">549 11 445 5161</div>
-                <div class="footer-column">
-                    <h2>Menú</h2>
-                    <ul class="footer-list">
-                        <li><a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a></li>
-                        <li><a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a></li>
-                        <li><a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a></li>
-                        <li><a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h2>Nuestras redes</h2>
-                    <ul class="footer-list">
-                        <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
-                        <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
-                        <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
-                        <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
-                    </ul>
-                </div>
+      <div class="footer-content">
+        <div class="footer-logo-container">
+          <img
+            src="../public/images/huellitas_en_casa-logo.png"
+            alt="Huellitas en casa"
+            class="footer-logo"
+          />
+          <p class="footer-direccion">ruta 16 Parc 501</p>
+          <p class="footer-telefono">(549) 11 4465 5161</p>
+        </div>
+        <div class="footer-columns">
+          <div class="footer-column">
+            <h2>Menú</h2>
+            <ul class="footer-list">
+              <li>
+                <a href="#about-us"
+                  ><i class="fa-solid fa-paw"></i> Acerca de</a
+                >
+              </li>
+              <li>
+                <a href="#animal-container"
+                  ><i class="fa-solid fa-paw"></i> Adopción</a
+                >
+              </li>
+              <li>
+                <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-column">
+            <h2>Nuestras redes</h2>
+            <ul class="footer-list">
+              <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
+              <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
+              <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
+              <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-column">
+          <h4>Suscríbete a nuestro Newsletter</h4>
+          <form action="https://your-mailchimp-form-action" method="post">
+            <div class="form-group">
+              <input
+                type="email"
+                name="EMAIL"
+                placeholder="Tu correo electrónico"
+                required
+              />
+              <button type="submit" class="btn-submit">Suscríbete</button>
             </div>
-            <div class="footer-newsletter">
-                <h3>Suscribite a nuestra newsletter</h3>
-                <input type="text" id="newsletter" name="newsletter" placeholder="Ingresa tu correo">
-            </div>
+          </form>
         </div>
-        <p class="footer-copyright">© 2024 Huellitas en Casa. Todos los derechos reservados.</p>
-        =======
-        <div class="footer-newsletter">
-            <h3>Suscribite a nuestra newsletter</h3>
-            <input type="text" id="newsletter" name="newsletter" placeholder="Ingresa tu correo">
-        </div>
-        </div>
-        <p class="footer-copyright">© 2024 Huellitas en Casa. Todos los derechos reservados.</p>
+      </div>
+      <p class="footer-copyright">
+        © 2024 Huellitas en Casa. Todos los derechos reservados.
+      </p>
     </footer>
-</body>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
